project boxes collapsing correctly

--- a/nathan_styles.css
+++ b/nathan_styles.css
@@ -62,14 +62,19 @@
 .project_desc {
     vertical-align: top;
     display: inline-block;
+    width: calc(100% - 160px);
+    overflow: hidden;
 }
 
 .project_desc h3 {
-    margin: 10px 0px 0px 10px;
+    margin: 10px 0px 15px 10px;
     color: #353535;
 }
 
 .project_desc p {
-    margin: 20px 0px 0px 20px;
+    width: calc(100% - 10px);
+    height: 4.5em;
+    margin: 0px 0px 0px 20px;
+    overflow: hidden;
 }
 
